fixed issue with broken search navigation in help and added concept to export module.package access at runtime